More scaffolding for the paper

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -8,7 +8,10 @@
 \maketitle
 
 \begin{abstract}
-
+B+ Trees, a tree structure used for the efficient storage and
+retrieval of key/value pairs, has been heavily used in the field of
+computer science. In this project, we devise a new learning tool for
+students to better understand the operations that a B+ tree performs.
 \end{abstract}
 
 \vspace{.5in}
