add an image of our interface

--- a/paper/approach.tex
+++ b/paper/approach.tex
@@ -1,1 +1,8 @@
 \section{Approach}
+
+\begin{figure}[htp]
+\centering
+\includegraphics[scale=0.25]{images/Interface.png}
+\caption{The user interface of our project}
+\label{UI}
+\end{figure}
