Update our title, abstract, and intro

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -1,4 +1,4 @@
-\title{B+ Trees in Interactive HTML5}
+\title{B Trees and B+ Trees in Interactive HTML5}
 \author{
   John Gunderman and Kenneth Watka \\
   Case Western Reserve University\\
@@ -8,10 +8,11 @@
 \maketitle
 
 \begin{abstract}
-B+ Trees, a tree structure used for the efficient storage and
-retrieval of key/value pairs, has been heavily used in the field of
-computer science. In this project, we devise a new learning tool for
-students to better understand the operations that a B+ tree performs.
+B Trees and B+ Trees are tree structures used for the efficient
+storage and retrieval of key/value pairs. Both data structures are
+heavily used in the field of Computer Science for a wide variety of
+applications. In this project, we devise a new learning tool for
+students to better understand the operations performed by B and B+ Trees.
 \end{abstract}
 
 \vspace{.5in}
