--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,8 +1,17 @@
 % No section for the introduction?
 
 Our project aims to create a visualization of B and B+ trees using HTML5
-technologies such as the canvas element and javascript. The user will open the
+technologies such as the \textit{canvas} element and Javascript. The user will open the
 webpage and be presented with an interface that allows them to insert, delete
-and search through these structures, with a real-time visualization of how the
+and search through these structures, with a visualization of how the
 operations are performed.
+
+B and B+ Trees are important data structures to be familiar with for
+anyone working in the field of Computer Science. While literature on
+the data structures is extensive, there does not exist a good
+interactive visualization tool for observing the data structures in
+action. The few tools that do exist for this purpose are somewhat old
+and are written in Java. We found HTML5 and Javascript to be a much
+more appealing and accessible language in today's web-connected world,
+and thus chose to bring these old visualization tools into the modern day.
 
