Fixed somem small formatting stuff

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,26 +1,34 @@
 \section{Future Work}
 
-Future changes we would like to make to our project would include 
-a hefty redesign for some of the tre structure algorithms, specifically the deletion methods.
-Our current deletion algorithms do a complete restructuring of the tree when we encounter an
-underflow because of deletion.  This method is convenient for reducing lines of code, but can 
-become very costly for large trees.  As such in the future we hope to be able to implement the 
-more common method for handling deletion that results in underflow, which is to then cascade upward, 
-merge with or borrowing from sibling nodes.  In the general case this method would prove to have 
-better performance, having a deletion time of O(log n) as oppposed to our current method which 
-has a deletion time of O(n log n).  Part of the reason we didn't not do the standard method of deletion 
-initially was because of some of the limitation fo Javascript.  Javascript lacks easy to use pointers, 
-which made things a bit harder when trying to keep track for each node/block, what it's children and parent were.
-As such we could not find a reasonable method of linking sibling nodes which would be necessary for 
-efficient implementation of standard method of handling underflow by borrowing or merging with siblings.
-    We'd also like to better organize the modularization of our insertion methods, while they work, 
-and run in time O(log n) the code itself is a bit disorganized making it hard to read through if you were
-trying to go through it manually to verify correctness.
+Future changes we would like to make to our project would include a
+hefty redesign for some of the tre structure algorithms, specifically
+the deletion methods.  Our current deletion algorithms do a complete
+restructuring of the tree when we encounter an underflow because of
+deletion.  This method is convenient for reducing lines of code, but
+can become very costly for large trees.  As such in the future we hope
+to be able to implement the more common method for handling deletion
+that results in underflow, which is to then cascade upward, merge with
+or borrowing from sibling nodes.  In the general case this method
+would prove to have better performance, having a deletion time of
+O(log n) as oppposed to our current method which has a deletion time
+of O(n log n).  Part of the reason we didn't not do the standard
+method of deletion initially was because of some of the limitation fo
+Javascript.  Javascript lacks easy to use pointers, which made things
+a bit harder when trying to keep track for each node/block, what it's
+children and parent were.  As such we could not find a reasonable
+method of linking sibling nodes which would be necessary for efficient
+implementation of standard method of handling underflow by borrowing
+or merging with siblings.  We'd also like to better organize the
+modularization of our insertion methods, while they work, and run in
+time O(log n) the code itself is a bit disorganized making it hard to
+read through if you were trying to go through it manually to verify
+correctness.
 
-Visually, it would also be a nice addition if we could provide step by step animation of how values, 
-or a search is moving through the tree to provide a better means of understanding exactly what is 
-occurring during various search, insertion, or deletion queries.  A simple textual output could suffice 
-if it explicitly stated things like:
+Visually, it would also be a nice addition if we could provide step by
+step animation of how values, or a search is moving through the tree
+to provide a better means of understanding exactly what is occurring
+during various search, insertion, or deletion queries.  A simple
+textual output could suffice if it explicitly stated things like:
 "Key 3 removed from node X"
 "Node X borrowed values a,b from node Y to cover underflow"
 ...
@@ -28,7 +36,9 @@ if it explicitly stated things like:
 "Node X split into Nodes Y, with values a,b, and Z, with values c,d"
 etc.
 
-This atleast would allow the user to follow along with the action step by step, even if they could not 
-see if visually animated.
+This atleast would allow the user to follow along with the action step
+by step, even if they could not see if visually animated.
 
 \section{Conclusion}
+
+
