change textit to texttt for intro

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,7 +1,7 @@
 % No section for the introduction?
 
 Our project aims to create a visualization of B and B+ trees using HTML5
-technologies such as the \textit{canvas} element and Javascript. The user will open the
+technologies such as the \texttt{canvas} element and Javascript. The user will open the
 webpage and be presented with an interface that allows them to insert, delete
 and search through these structures, with a visualization of how the
 operations are performed.
