--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -41,4 +41,10 @@ by step, even if they could not see if visually animated.
 
 \section{Conclusion}
 
-
+While we did not achieve our final goal, we have still come a long way
+towards making HTML5 B and B+ Tree visualization a useful tool for the
+intrepid student. The user can successfully insert, delete, and search
+for values in the tree. At each action, the user recieves a
+visualization of the new tree state. As detailed in our \textit{Future
+  Work} section, we would like to implement the aforementioned
+features in order to consider this system truly complete.
