--- a/paper/content.tex
+++ b/paper/content.tex
@@ -15,8 +15,9 @@ applications. In this project, we devise a new learning tool for
 students to better understand the operations performed by B and B+ Trees.
 \end{abstract}
 
+\setcounter{tocdepth}{1}
+\tableofcontents
 \vspace{.5in}
-
 \input{intro}
 \input{approach}
 \input{algorithms}
