--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,5 +1,5 @@
 % No section for the introduction?
-
+\section{Introduction}
 Our project aims to create a visualization of B and B+ trees using HTML5
 technologies such as the \texttt{canvas} element and Javascript. The user will open the
 webpage and be presented with an interface that allows them to insert, delete
