--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -41,10 +41,11 @@ by step, even if they could not see if visually animated.
 
 \section{Conclusion}
 
-While we did not achieve our final goal, we have still come a long way
-towards making HTML5 B and B+ Tree visualization a useful tool for the
-intrepid student. The user can successfully insert, delete, and search
-for values in the tree. At each action, the user recieves a
-visualization of the new tree state. As detailed in our \textit{Future
-  Work} section, we would like to implement the aforementioned
-features in order to consider this system truly complete.
+Our project successfully met the goals we set out to accomplish when
+we began this project. The user can successfully insert, delete, and
+search for values in the B or B+ Tree. At each action, the user
+recieves a visualization of the new tree state.
+
+In the process of develooping this project, we came across more great
+ideas for features we could develop. These are detailed above, in the
+\textit{Future Work} section.
