--- a/paper/approach.tex
+++ b/paper/approach.tex
@@ -30,9 +30,27 @@ insertion, deletion, and searching the trees still had to remain
 completely separate due to the subtly differences in the tree
 structures.
 
-\begin{figure}[htp]
-\centering
-\includegraphics[scale=0.25]{images/Interface.png}
-\caption{The user interface of our project}
-\label{UI}
-\end{figure}
+\subsection{HTML5 Frontend}
+Due to the dynamic nature of the content we needed to display to the
+user, we decided to use the HTML5 \texttt{canvas} element. With the
+\texttt{canvas} element, it is possible to draw things directly on the
+screen. However, the \texttt{canvas} element is quite low level in
+its functionality. In order to utilize higher order abstractions, we
+utilized a library called \textit{Kinetic.js}. This library allowed us
+to specify groups of shapes which would be considered as a consistent
+whole when moving across the screen. From this we could construct node
+and edge objects which would be consistent throughout the modelling
+process.
+
+User input occurs through the use of text boxes and buttons directly
+underneath the \texttt{canvas} display. These buttons are labeled with
+the different possible actions: insert, delete, and search. By
+inputting a value into the associated text box, and pressing the
+button, the user initiates a modification to the tree.
+
+%% \begin{figure}[htp]
+%% \centering
+%% \includegraphics[scale=0.25]{images/Interface.png}
+%% \caption{The user interface of our project}
+%% \label{UI}
+%% \end{figure}
