Merge, fixed figures

--- a/paper/algorithms.tex
+++ b/paper/algorithms.tex
@@ -113,35 +113,37 @@ eachother on the x-axis, they should maintain the same ordering throughout.
 %% WIP
 
 \subsection{Example of Tree Construction}
-\begin{figure}[htp]
+
+\begin{figure}[htp!]
 \centering
 \includegraphics[scale=0.25]{images/Insert_one.png}
 \caption{B tree after inserting value 1}
 \label{EX1}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[htp!]
 \centering
 \includegraphics[scale=0.25]{images/Insert_two.png}
 \caption{B tree after inserting value 2}
 \label{EX2}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[htp!]
 \centering
 \includegraphics[scale=0.25]{images/Insert_three_split_root.png}
 \caption{B tree after inserting value 3, splitting root}
 \label{EX3}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[htp!]
 \centering
 \includegraphics[scale=0.25]{images/Insert_four.png}
 \caption{B tree after inserting value 4}
 \label{EX4}
 \end{figure}
+\clearpage
 
-\begin{figure}[htp]
+\begin{figure}[htp!]
 \centering
 \includegraphics[scale=0.25]{images/Insert_zero.png}
 \caption{B tree after inserting value 0}
