Add some stuff to conclusion

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -51,18 +51,19 @@ by step, even if they could not see if visually animated.
 Our project successfully met the goals we set out to accomplish when
 we began this project. The user can successfully insert, delete, and
 search for values in the B or B+ Tree. At each action, the user
-recieves a visualization of the new tree state.  The user can freely 
-switch between either tree representation without clearing the data 
-form the tree, allowing for an excellent mening of observeing the 
+recieves a visualization of the new tree state.  The user can freely
+switch between either tree representation without clearing the data
+form the tree, allowing for an excellent mening of observeing the
 specific differences in these two types of trees.
 
 In the process of develooping this project, we came across more great
 ideas for features we could develop. These are detailed above, in the
-\textit{Future Work} section.  This project still holds a lot of 
-promise to go above ane beyond its current state, and we hope to make 
-it even better then we can currently picture it.  This project taught 
-us both a lot about trees and indexing structure, and not just how 
-they work in an abstract sense, but how to make them work in a 
-computing environment as well.  We shall carry the lessons we have 
-leanred from this project with us for years to come, and it has made 
-us both better programmers for having worked on it.
+\textit{Future Work} section.  This project still holds a lot of
+promise to go above ane beyond its current state, and we hope to make
+it even better then we can currently picture it.  This project taught
+us both a lot about trees and indexing structure, and not just how
+they work in an abstract sense, but how to make them work in a
+computing environment as well. We also learned a lot about Javascript
+and its many quirks.  We shall carry the lessons we have leanred from
+this project with us for years to come, and it has made us both better
+programmers for having worked on it.
