--- a/paper/algorithms.tex
+++ b/paper/algorithms.tex
@@ -35,13 +35,13 @@ reached a leaf node.  Until we reach a leaf we just decide which child to explor
 starting from that child.  Once we've reached a leaf node, if we find the value in the node, we return the node index amd a true flag.  If we reach a leaf node, and it does not contain our search value, then we return falseto indicate the value does not exist
  in the tree.
  
-    Implementing insertion into the trees was where things became a bit complicated.  Specifically having to handle overflow and node splitting.  The insertion mothed for B trees starts out fairly simple, we do a search through the tree for the insertion value.  Regardless of whether the value is found or not, the search method should return us the node that the value should be inserted into.  We then do a brute force insert into the node, temporarily ignoring order, just to get the nodes values sorted.  Once we have the value inserted, we check if the node is now overflowing or not, if not we are done and end the function.  If we do encounter over flow then we quickly calculate the median value and partition the values into two separate sets around the median, but neither including the median value.  We then pass the two sets of values, the median value, the index of the median value, and the current node to out insertUp method to handle the spliting of the node.  The insertUp method recieves these values and that check to see if the current node is the root node or not.  If we are splitting the root node then the split is easy enough to accomplish.  We create two new nodes that will become the children to the root, and each inherit half the children of the previous root.  We want to keep the root of the tree at index 0 in the array of all nodes in the tree for convenience, which is why the new nodes created are the children to our new root, and not one of the chidren and the new root node.  We assign the appropriate values and children to the new nodes, and set them to look at the root node as their parent, we then assign the the new root the median value fomr the split node, and set its children to include the new children nodes we have created.
+    Implementing insertion into the trees was where things became a bit complicated.  Specifically having to handle overflow and node splitting.  The insertion mothed for B trees starts out fairly simple, we do a search through the tree for the insertion value.  Regardless of whether the value is found or not, the search method should return us the node that the value should be inserted into.  We then do a brute force insert into the node, temporarily ignoring order, just to get the nodes values sorted.  Once we have the value inserted, we check if the node is now overflowing or not, if not we are done and end the function.  If we do encounter over flow then we quickly calculate the median value and partition the values into two separate sets around the median, but neither including the median value.  We then pass the two sets of values, the median value, the index of the median value, and the current node to out insertUp method to handle the spliting of the node.  The insertUp method recieves these values and that check to see if the current node is the root node or not.  If we are splitting the root node then the split is easy enough to accomplish.  We create two new nodes that will become the children to the root, and each inherit half the children of the previous root.  We want to keep the root of the tree at index 0 in the array of all nodes in the tree for convenience, which is why the new nodes created are the children to our new root, and not one of the children and the new root node.  We assign the appropriate values and children to the new nodes, and set them to look at the root node as their parent, we then assign the the new root the median value from the split node, and set its children to include the new children nodes we have created.
     
-    If the node to be split was instead a leaf or internal node then the method of splitting is slightly different.  In this case we are only creating one new node to the tree, all the appropriate values and children, if any exist, are split bewteen the original node we are splitting and the new node we are creating to take in half the values, and possible half the children.  We then recursively call the inserUp method to insert the median value into the split node's parent.  The function will recurse until eith er no node needs to be split, or we've split the root node.
+    If the node to be split was instead a leaf or internal node then the method of splitting is slightly different.  In this case we are only creating one new node to the tree, all the appropriate values and children, if any exist, are split between the original node we are splitting and the new node we are creating to take in half the values, and possible half the children.  We then recursively call the insertUp method to insert the median value into the split node's parent.  The function will recurse until either no node needs to be split, or we've split the root node.
     
     Insertion for B+ trees in almost identical, except it has to handle an extra specific case that B trees do not deal with.  Splitting internal nodes and the root node function identically, but B+ trees behave differently than B trees when splitting leaf nodes, and so an extra method to handle this case called bp\_leaf\_split is implemented.  When splitting a leaf node, it is similar to splitting an internal node, with slight changes.  When splitting a leaf node, we split the node down the middle, but do not separate out the median value to be inserted up into the parent node.  Instead, we select the smallest value from the right side of the split node and insert that as a key into the parent node, this being because all values are stored at the leaf level in B+ trees.  After splitting a leaf node we then call the B+ tree's insertUp method to handle insertion of the new key and potential splitting of the parent node.
     
-    After some tweaking and discussion about our implementation for deletion in both B and B+ trees was changed from our original intended method in exchange for a more streamlined, though more costly method.  In investigating methods for implementing deletion from B and B+ trees we found there to be two popular methods of accomplishing this task.  The first is the most obvious, but also the more complex of the two to implement.  It consists of search for the value in the tree, removing it from where it lies, and then if the node should underflow, borrow from or merge with sibling nodes, and if need be change keys in parent nodes, which could then result in underflow propogating upward in the tree, which in turn would need to be handled.  The other method suggested passing throught he tree and restructuring it such that no underflow would occur when the value is removed.  We ahd originally intended to implement the first method, but found that in development that the way we had things structured made it mush easier to implement the second method.  Our implementation of this method was fairly striaght forward.  We search for the value to be deleted, if we find it and no underflow will occur, we remove it and are done.  If underflow does occur, then utilizing the tree's master list of values in the tree, we reconstruct the tree from these values, less the deleted value.  Our implementation run approximately in time O(n log n), but for small n the effect on performance in negligible.
+    After some tweaking and discussion about our implementation for deletion in both B and B+ trees was changed from our original intended method in exchange for a more streamlined, though more costly method.  In investigating methods for implementing deletion from B and B+ trees we found there to be two popular methods of accomplishing this task.  The first is the most obvious, but also the more complex of the two to implement.  It consists of search for the value in the tree, removing it from where it lies, and then if the node should underflow, borrow from or merge with sibling nodes, and if need be change keys in parent nodes, which could then result in underflow propagating upward in the tree, which in turn would need to be handled.  The other method suggested passing through the tree and restructuring it such that no underflow would occur when the value is removed.  We had originally intended to implement the first method, but found that in development that the way we had things structured made it mush easier to implement the second method.  Our implementation of this method was fairly straight forward.  We search for the value to be deleted, if we find it and no underflow will occur, we remove it and are done.  If underflow does occur, then utilizing the tree's master list of values in the tree, we reconstruct the tree from these values, less the deleted value.  Our implementation run approximately in time O(n log n), but for small n the effect on performance in negligible.
 
 \subsection{Graph Layout Algorithms}
 The UI portion of this project requires a sizable amount of
@@ -65,13 +65,13 @@ the user is limited by the available screen real estate. This limits
 the number of nodes down to a reasonable level, and thus keeps our
 running time within reason.
 
-Force based algorithms operate by modelling interaction between the
+Force based algorithms operate by modeling interaction between the
 graph nodes using equations borrowed from physics. Each node is
 treated as an electrically charged particle, repelling the other nodes
 in the graph according to Coulomb's Law. Each edge on the graph is
 treated as a spring, attracting the two connected nodes according to
 Hooke's Law. The simulation randomizes initial node positions and then
-simulates each timestep in the model until equilibrium is reached. At
+simulates each time step in the model until equilibrium is reached. At
 equilibrium, the nodes should be placed in such a way that overlap is
 minimized.
 
@@ -106,10 +106,10 @@ $(x,y)$ coordinates for the parent node. The issue of ordering proved
 to be a bit more difficult. The solution we designed relies on the
 algorithm used to build the tree. This algorithm inserts nodes one at
 a time in a left to right order. With this in mind, our force-based
-algorihtm inserts all new nodes at the proper level, but to the far
+algorithm inserts all new nodes at the proper level, but to the far
 right of the graph. This causes all of the nodes to shift to the left
 as the model reaches equilibrium. Because the nodes should not cross
-eachother on the x-axis, they should maintain the same ordering throughout.
+each other on the x-axis, they should maintain the same ordering throughout.
 %% WIP
 
 \subsection{Example of Tree Construction}
