--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,7 +1,7 @@
 \section{Future Work}
 
 Future changes we would like to make to our project would include a
-hefty redesign for some of the tre structure algorithms, specifically
+hefty redesign for some of the tree structure algorithms, specifically
 the deletion methods.  Our current deletion algorithms do a complete
 restructuring of the tree when we encounter an underflow because of
 deletion.  This method is convenient for reducing lines of code, but
@@ -10,9 +10,9 @@ to be able to implement the more common method for handling deletion
 that results in underflow, which is to then cascade upward, merge with
 or borrowing from sibling nodes.  In the general case this method
 would prove to have better performance, having a deletion time of
-O(log n) as oppposed to our current method which has a deletion time
+O(log n) as opposed to our current method which has a deletion time
 of O(n log n).  Part of the reason we didn't not do the standard
-method of deletion initially was because of some of the limitation fo
+method of deletion initially was because of some of the limitation of
 Javascript.  Javascript lacks easy to use pointers, which made things
 a bit harder when trying to keep track for each node/block, what it's
 children and parent were.  As such we could not find a reasonable
@@ -42,7 +42,7 @@ textual output could suffice if it explicitly stated things like:
 \\*
 etc.
 \\ \\
-This atleast would allow the user to follow along with the action step
+This at least would allow the user to follow along with the action step
 by step, even if they could not see if visually animated.
 
 
@@ -51,15 +51,15 @@ by step, even if they could not see if visually animated.
 Our project successfully met the goals we set out to accomplish when
 we began this project. The user can successfully insert, delete, and
 search for values in the B or B+ Tree. At each action, the user
-recieves a visualization of the new tree state.  The user can freely
+receives a visualization of the new tree state.  The user can freely
 switch between either tree representation without clearing the data
-form the tree, allowing for an excellent mening of observeing the
+form the tree, allowing for an excellent means of observing the
 specific differences in these two types of trees.
 
-In the process of develooping this project, we came across more great
+In the process of developing this project, we came across more great
 ideas for features we could develop. These are detailed above, in the
 \textit{Future Work} section.  This project still holds a lot of
-promise to go above ane beyond its current state, and we hope to make
+promise to go above and beyond its current state, and we hope to make
 it even better then we can currently picture it.  This project taught
 us both a lot about trees and indexing structure, and not just how
 they work in an abstract sense, but how to make them work in a
